
SVN
-------------------------------
XML:   Resolved issue CASTOR-716 using contribution from Edward Kuns [edward.kuns@aspect.com]
       SourceGenerator doesn't correctly generate the .equals() method for base64binary
       Details: http://jira.codehaus.org/browse/CASTOR-716
       (Edward - 20061007)

XML:   Resolved issue CASTOR-1609 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Implement equals() for AnyNode
       Details: http://jira.codehaus.org/browse/CASTOR-1609
       (Edward - 20061006)

XML:   Resolved issue CASTOR-1417 using contribution from Edward Kuns [edward.kuns@aspect.com]
       hashCode() generation
       Details: http://jira.codehaus.org/browse/CASTOR-1417
       (Edward - 20061006)

XML:   Resolved issue CASTOR-1027 using contribution from Edward Kuns [edward.kuns@aspect.com]
       demo example of SourceGenerator does not build
       Details: http://jira.codehaus.org/browse/CASTOR-1027
       (Edward - 20061005)

XML:   Resolved issue CASTOR-1608 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Split "main" out of SourceGenerator.java
       Details: http://jira.codehaus.org/browse/CASTOR-1608
       (Edward - 20061005)

XML:   Resolved issue CASTOR-1602 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add new test case type to read schema only
       Details: http://jira.codehaus.org/browse/CASTOR-1602
       (Edward - 20061005)

XML:   Resolved issue CASTOR-1607 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add regression test for parent issue (Generated classes are not
       compileable for simpleTypes with list-elements)
       Details: http://jira.codehaus.org/browse/CASTOR-1607
       (Edward - 20061003)

XML:   Resolved issue CASTOR-1226 using contribution from Bertrand Martel [toto@free.fr]
       Fixed problem with type derivation for referenced/included attribute.
       Details: http://jira.codehaus.org/browse/CASTOR-1226